--- a/app/src/main/res/layout-port/layout_enter_1.xml
+++ b/app/src/main/res/layout-port/layout_enter_1.xml
@@ -10,57 +10,54 @@
     tools:context="com.example.alex.avtomanager.MainActivity">
 
     <EditText
+        android:id="@+id/car_brand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/car_brand"
         android:inputType="text"
-        android:hint="@string/car_brand"
-        android:gravity="center_horizontal"/>
+        android:gravity="center_horizontal"
+        android:hint="@string/car_brand"/>
 
     <EditText
+        android:id="@+id/car_model"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/car_model"
         android:layout_below="@+id/car_brand"
         android:inputType="text"
-        android:hint="@string/car_model"
-        android:gravity="center_horizontal"/>
+        android:gravity="center_horizontal"
+        android:hint="@string/car_model"/>
 
     <LinearLayout
+        android:id="@+id/liner_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/liner_layout"
-        android:layout_below="@+id/car_model">
+        android:layout_below="@+id/car_model"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:id="@+id/cancel"
-            android:text="@android:string/cancel"
-            android:onClick="onClick"/>
-
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/next"
+            android:onClick="onClick"
+            android:text="@android:string/cancel"/>
+
+        <Button
             android:id="@+id/next"
-            android:onClick="onClick"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="@string/next"/>
 
     </LinearLayout>
 
     <TextView
+        android:id="@+id/page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:id="@+id/page"
         android:text="@string/page1" />
 
-    //TODO Подумать над заменой текст вью на прогресс бар. При нажатии на кнопку некст, прогресс бар увеличивается на 20%
-    http://developer.alexanderklimov.ru/android/views/progressbar.php
-
-
+    <!--TODO Подумать над заменой текст вью на прогресс бар. При нажатии на кнопку некст, прогресс бар увеличивается на 20%    http://developer.alexanderklimov.ru/android/views/progressbar.php -->
 </RelativeLayout>
