--- a/app/src/main/res/layout-port/layout_enter_2.xml
+++ b/app/src/main/res/layout-port/layout_enter_2.xml
@@ -1,73 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_1"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/layout_1">
+    android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/enter_speedometr_layout_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/enter_speedometr_layout_2"
-        android:text="@string/enter_speedometr"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/enter_speedometr"/>
 
     <LinearLayout
+        android:id="@+id/layout_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/layout_2"
         android:layout_below="@+id/enter_speedometr_layout_2">
 
-
         <EditText
+            android:id="@+id/manual_input_layout_enter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/manual_input_layout_enter"
-            android:hint="@string/manual_input"
+            android:layout_weight="1"
             android:maxLines="1"
             android:maxLength="10000000"
             android:inputType="number"
-            android:layout_weight="1"/>
+            android:hint="@string/manual_input"/>
 
         <Button
+            android:id="@+id/foto_input_layout_enter"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/foto_input_layout_enter"
-            android:text="@string/foto_input"
             android:onClick="onClick"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="@string/foto_input"/>
     </LinearLayout>
 
     <Button
+        android:id="@+id/enter_data_layout_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/enter_data_layout_2"
         android:layout_below="@+id/layout_2"
-        android:hint="@string/enter_data" />
+        android:hint="@string/enter_data"/>
 
     <TextView
+        android:id="@+id/text_view_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/text_view_data"
         android:layout_below="@+id/enter_data_layout_2"/>
 
     <Button
+        android:id="@+id/next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:text="@string/next"
-        android:id="@+id/next"
         android:layout_below="@+id/text_view_data"
         android:layout_centerHorizontal="true"
-        android:onClick="onClick" />
+        android:onClick="onClick"
+        android:text="@string/next"/>
 
     <TextView
+        android:id="@+id/page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/page"
-        android:text="@string/page2"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/page2"/>
 
 </RelativeLayout>
