--- a/app/src/main/res/layout-port/layout_enter_3.xml
+++ b/app/src/main/res/layout-port/layout_enter_3.xml
@@ -1,59 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:id="@+id/relative_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/relative_layout">
+    android:orientation="vertical">
 
     <EditText
+        android:id="@+id/interval_km"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/interval_km"
+        android:gravity="center_horizontal"
         android:maxLines="1"
         android:maxLength="10000000"
         android:inputType="number"
-        android:hint="@string/interval_km"
-        android:gravity="center_horizontal" />
+        android:hint="@string/interval_km"/>
 
     <LinearLayout
+        android:id="@+id/liner_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/liner_layout"
         android:layout_below="@+id/interval_km"
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/mount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/mount"
-            android:text="@string/interval_mount"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:text="@string/interval_mount"/>
 
         <Spinner
+            android:id="@+id/interval_mount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/interval_mount"
-            android:hint="@string/month"
             android:gravity="center_horizontal"
-            android:entries="@array/the_number_day"/>
+            android:entries="@array/the_number_day"
+            android:hint="@string/month"/>
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/next"
-        android:id="@+id/next"
         android:layout_below="@+id/liner_layout"
         android:layout_centerHorizontal="true"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:text="@string/next"/>
 
     <TextView
+        android:id="@+id/page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/page"
-        android:text="@string/page3"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/page3"/>
 
 </RelativeLayout>
