--- a/app/src/main/res/layout-port/layout_enter_5.xml
+++ b/app/src/main/res/layout-port/layout_enter_5.xml
@@ -5,51 +5,51 @@
     android:layout_height="match_parent" >
 
     <Button
+        android:id="@+id/part"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/part"
-        android:text="@string/array_2"
-        android:onClick="onClick" />
+        android:onClick="onClick"
+        android:text="@string/array_2"/>
 
     <Button
+        android:id="@+id/parameters"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/parameters"
         android:layout_below="@+id/part"
-        android:text="@string/array_1"
-        android:onClick="onClick" />
+        android:onClick="onClick"
+        android:text="@string/array_1"/>
 
     <LinearLayout
+        android:id="@+id/liner_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:id="@+id/liner_layout"
-        android:layout_below="@+id/parameters">
+        android:layout_below="@+id/parameters"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:id="@+id/cancel"
-            android:text="@android:string/cancel"
-            android:onClick="onClick" />
-
-        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/next"
+            android:onClick="onClick"
+            android:text="@android:string/cancel"/>
+
+        <Button
             android:id="@+id/next"
-            android:onClick="onClick" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="onClick"
+            android:text="@string/next"/>
 
     </LinearLayout>
 
     <TextView
+        android:id="@+id/page"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:id="@+id/page"
-        android:text="@string/page5" />
+        android:text="@string/page5"/>
 
 </RelativeLayout>
