--- a/app/src/main/res/layout/layuot_parameters_edit.xml
+++ b/app/src/main/res/layout/layuot_parameters_edit.xml
@@ -1,57 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <EditText
+        android:id="@+id/name_parameter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/name_parameter"
+        android:gravity="center_horizontal"
         android:inputType="text"
         android:lines="1"
         android:maxLines="1"
         android:maxLength="50"
-        android:gravity="center_horizontal"
-        android:hint="@string/name_parameters" />
+        android:hint="@string/name_parameters"/>
 
     <RadioGroup
+        android:id="@+id/select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/select"
         android:orientation="horizontal">
 
         <RadioButton
+            android:id="@+id/replace"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/replace"
-            android:text="@string/replace"
             android:onClick="onClick"
-            android:checked="true"/>
+            android:checked="true"
+            android:text="@string/replace"/>
 
         <RadioButton
+            android:id="@+id/control"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/control"
-            android:text="@string/control"
-            android:onClick="onClick" />
+            android:onClick="onClick"
+            android:text="@string/control"/>
 
     </RadioGroup>
 
     <Button
+        android:id="@+id/add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/add"
-        android:text="@string/add"
-        android:onClick="onClick" />
+        android:onClick="onClick"
+        android:text="@string/add"/>
 
     <Button
+        android:id="@+id/complete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/complete"
-        android:id="@+id/complete"
-        android:onClick="onClick" />
+        android:onClick="onClick"
+        android:text="@string/complete"/>
 
 </LinearLayout>
